button review amends

--- a/packages/storybook-html/src/components/button/button.docs.mdx
+++ b/packages/storybook-html/src/components/button/button.docs.mdx
@@ -53,7 +53,7 @@ Secondary button is used to highlight important actions. For example, save butto
 Secondary-light button variant is used on dark backgrounds.
 
 <Canvas withSource="none">
-  <Story id="components-button--secondary-light" />
+  <Story height="270px" id="components-button--secondary-light" />
 </Canvas>
 
 ```html
@@ -108,38 +108,39 @@ Expand version of the button would extend the width of the button to full width 
   <tbody className="uqds-table__body">
     <tr className="uqds-table__mobile-heading">
       <th className="uqds-table__heading">Category</th>
-      <th className="uqds-table__heading">Styles</th>
+      <th className="uqds-table__heading">Style</th>
       <th className="uqds-table__heading">How/When to use:</th>
     </tr>
     <tr className="uqds-table__row">
       <td className="uqds-table__item" data-title="Category:">Primary</td>
-      <td className="uqds-table__item" data-title="Styles:">Normal, outline, text, expand</td>
-      <td className="uqds-table__item" data-title="How/When to use:">Used for most important call to action button on the webpage</td>
+      <td className="uqds-table__item" data-title="Styles:">Normal</td>
+      <td className="uqds-table__item" data-title="How/When to use:">Used for the most important button and only once on the webpage.</td>
     </tr>
     <tr className="uqds-table__row">
       <td className="uqds-table__item" data-title="Category:">Secondary</td>
-      <td className="uqds-table__item" data-title="Styles:">Normal, outline, text, expand</td>
-      <td className="uqds-table__item" data-title="How/When to use:">Used for important actions like save etc.</td>
+      <td className="uqds-table__item" data-title="Styles:">Normal</td>
+      <td className="uqds-table__item" data-title="How/When to use:">Used for important actions like save, cancel etc.</td>
     </tr>
     <tr className="uqds-table__row">
       <td className="uqds-table__item" data-title="Category:">Secondary light</td>
-      <td className="uqds-table__item" data-title="Styles:">Normal, outline, text, expand</td>
+      <td className="uqds-table__item" data-title="Styles:">Normal</td>
       <td className="uqds-table__item" data-title="How/When to use:">Used on dark backgrounds</td>
     </tr>
     <tr className="uqds-table__row">
       <td className="uqds-table__item" data-title="Category:">Purple</td>
-      <td className="uqds-table__item" data-title="Styles:">Normal, outline, text, expand</td>
-      <td className="uqds-table__item" data-title="How/When to use:">Used in UQ events and stories sections</td>
+      <td className="uqds-table__item" data-title="Styles:">Normal</td>
+      <td className="uqds-table__item" data-title="How/When to use:">Used in UQ related events and stories</td>
     </tr>
   </tbody>
 </table>
 
-- Outline style is used as a tertiary button to signify their lesser prominence from the normal style.
+- Outline & text style - Used as a tertiary button to signify their lesser prominence from the normal style.
+- Expand style - Used with design descretion when layout demands.
 
 ### States
 
-Default - the button text is not underlined. <br />
-Hover - the button text is underlined. The background and text color may change depending on the variant.
+Default - Button text is not underlined. <br />
+Hover - Button text is underlined. The background and text color may change depending on the variant.
 
 ### Breakpoints
 
