--- a/packages/storybook-html/src/components/button/button.docs.mdx
+++ b/packages/storybook-html/src/components/button/button.docs.mdx
@@ -142,6 +142,10 @@ Expand version of the button would extend the width of the button to full width 
 Default - Button text is not underlined. <br />
 Hover - Button text is underlined. The background and text color may change depending on the variant.
 
+### Sizes
+
+The 4 button sizes are normal `uq-button`, tiny `uq-button--tiny`, small `uq-button--small` and large `uq-button--large`
+
 ### Breakpoints
 
 Breakpoints have no effect on the button component and visually remains the same.
