--- a/packages/storybook-html/src/components/button/button.docs.mdx
+++ b/packages/storybook-html/src/components/button/button.docs.mdx
@@ -135,7 +135,7 @@ Expand version of the button would extend the width of the button to full width 
 </table>
 
 - Outline & text style - Used as a tertiary button to signify their lesser prominence from the normal style.
-- Expand style - Used with design descretion when layout demands.
+- Expand style - Used with design discretion when layout demands.
 
 ### States
 
@@ -144,7 +144,7 @@ Hover - Button text is underlined. The background and text color may change depe
 
 ### Sizes
 
-The 4 button sizes are normal `uq-button`, tiny `uq-button--tiny`, small `uq-button--small` and large `uq-button--large`
+The 4 button sizes are normal, tiny `uq-button--tiny`, small `uq-button--small` and large `uq-button--large`
 
 ### Breakpoints
 
