--- a/packages/storybook-html/src/components/button/button.docs.mdx
+++ b/packages/storybook-html/src/components/button/button.docs.mdx
@@ -11,7 +11,7 @@ import StatusBadge from '../../../.storybook/custom/components/StatusBadge';
 
 The button component is used to navigate to a web link or to an anchor name tag on the same page or different page. 
 - The button categories are primary, secondary, secondary-light and purple. 
-- Each category also has its variant styles like outline, text and expanded options to be used in different scenarios.
+- Each category has it's own variant styles like outline, text and expanded options to be used in different scenarios.
 
 ## Default example
 
