size section amends

--- a/packages/storybook-html/src/components/button/button.docs.mdx
+++ b/packages/storybook-html/src/components/button/button.docs.mdx
@@ -83,19 +83,20 @@ The button sizes are normal, tiny `uq-button--tiny`, small `uq-button--small` an
 
 ```html
 <button class="uq-button">Button</button>
-<button class="uq-button uq-button--tiny">Button</button>
-<button class="uq-button uq-button--small">Button</button>
-<button class="uq-button uq-button--large">Button</button>
-<br/><br/>
 <button class="uq-button uq-button--outline">Button</button>
-<button class="uq-button uq-button--outline uq-button--tiny">Button</button>
-<button class="uq-button uq-button--outline uq-button--small">Button</button>
-<button class="uq-button uq-button--outline uq-button--large">Button</button>
-<br/><br/>
 <button class="uq-button uq-button--text">Button</button>
-<button class="uq-button uq-button--text uq-button--tiny">Button</button>
-<button class="uq-button uq-button--text uq-button--small">Button</button>
-<button class="uq-button uq-button--text uq-button--large">Button</button>
+
+<button class="uq-button uq-button--tiny">Button</button>
+<button class="uq-button uq-button--tiny uq-button--outline">Button</button>
+<button class="uq-button uq-button--tiny uq-button--text">Button</button>
+
+<button class="uq-button uq-button--small">Button</button>
+<button class="uq-button uq-button--small uq-button--outline">Button</button>
+<button class="uq-button uq-button--small uq-button--text">Button</button>
+
+<button class="uq-button uq-button--large">Button</button>
+<button class="uq-button uq-button--large uq-button--outline">Button</button>
+<button class="uq-button uq-button--large uq-button--text">Button</button>    
 ```
 
 ### Expand
