cleaned up docs and examples

--- a/packages/storybook-html/src/components/hero/hero.docs.mdx
+++ b/packages/storybook-html/src/components/hero/hero.docs.mdx
@@ -4,51 +4,29 @@ import StatusBadge from '../../../.storybook/custom/components/StatusBadge';
 <Meta title="Components/Hero/All" />
 
 # Hero
-<StatusBadge.Deprecated />
-
-HERO
+<StatusBadge.Development />
 
 <Canvas withSource="none">
-  <Story id="components-page-header--page-header" />
+  <Story id="components-hero" />
 </Canvas>
 
-### Page header default
+### Hero default
 
 ```html
-<div class="page__header">  
-  <div class="uq-grid">
-    <div class="uq-grid__col uq-grid__col--6">
-      <h1 class="page__title">Page title</h1>
+<div class="hero">  
+  <div class="hero__image">
+    <div class="hero__image--small">
+      <img src="https://picsum.photos/375/250" />
+    </div>
+    <div class="hero__image--large">
+      <img src="https://picsum.photos/1920/540" />
     </div>
   </div>
-</div>
-```
-
-### Page header default + Breadcrumb
-
-```html
-<div class="page__header">  
-  <div class="uq-grid">
-    <div class="uq-grid__col uq-grid__col--6">
-      <h1 class="page__title">Page title</h1>
-
-      <ol class="breadcrumb-trail" itemscope="" itemtype="http://schema.org/BreadcrumbList">
-        <li class="breadcrumb breadcrumb--home" itemprop="itemListElement" itemscope="" itemtype="http://schema.org/ListItem">
-          <a title="Home" href="/" class="breadcrumb__link breadcrumb__link--home">
-            <span class="icon icon-uq-home"></span>
-          </a>
-          <meta itemprop="position" content="1">
-        </li>
-        <li class="breadcrumb" itemprop="itemListElement" itemscope="" itemtype="http://schema.org/ListItem">
-          <a class="breadcrumb__link" itemprop="item" href="/information-and-services">Information and services</a>
-          <meta itemprop="position" content="2">
-        </li>
-        <li class="breadcrumb" itemprop="itemListElement" itemscope="" itemtype="http://schema.org/ListItem">
-          <a class="breadcrumb__link" itemprop="item" href="/information-and-services/human-resources" title="">Human resources</a>
-          <meta itemprop="position" content="3">
-        </li>
-      </ol>
-
+  <div class="hero__content uq-grid">
+    <div class="hero__text uq-grid__col uq-grid__col--6">
+      <h1>Start postgraduate study online</h1>
+      <p class="hero__subtext">Apply by June 30</p>
+      <p><a class="uq-button" href="#">Learn more</a></p>
     </div>
   </div>
 </div>
