with icon variant added

--- a/packages/storybook-html/src/components/tabs/tabs.docs.mdx
+++ b/packages/storybook-html/src/components/tabs/tabs.docs.mdx
@@ -76,6 +76,20 @@ The Tabs component are tab's that are aligned together which on user interaction
   </div>
 ```
 
+### With Icon
+
+<Canvas withSource="none">
+  <Story id="components-tabs--tabs-with-icon" />
+</Canvas>
+
+```html
+...
+<button class="tabs__tab tabs__tab--active" role="tab" aria-selected="true" aria-controls="tab1-panel" id="tab1">
+    <span class="uq-icon uq-icon--pin"></span> Tab 1
+</button>
+...
+```
+
 ## Sub-variant examples
 
 ### Full width
