extended styles and markup to accommodate no-image variant

--- a/packages/storybook-html/src/components/hero/hero.docs.mdx
+++ b/packages/storybook-html/src/components/hero/hero.docs.mdx
@@ -6,8 +6,10 @@ import StatusBadge from '../../../.storybook/custom/components/StatusBadge';
 # Hero
 <StatusBadge.Development />
 
+HERO 
+
 <Canvas withSource="none">
-  <Story id="components-hero" />
+  <Story id="components-hero" height={505} />
 </Canvas>
 
 ### Hero default
