Fix typo in Typography Usage title in storybook

--- a/packages/storybook-html/src/components/core/typography-applying.story.mdx
+++ b/packages/storybook-html/src/components/core/typography-applying.story.mdx
@@ -124,7 +124,7 @@ Font size should be a minimum of 16px.</td>
 </table>
 `;
 
-<Story name="Typogrphy Usage">{TypographyUsage.bind({})}</Story>
+<Story name="Typography Usage">{TypographyUsage.bind({})}</Story>
 
 ## Example usage
 
