scss changed to match js

--- a/packages/storybook-html/src/components/tabs/tabs.docs.mdx
+++ b/packages/storybook-html/src/components/tabs/tabs.docs.mdx
@@ -83,11 +83,12 @@ The Tabs component are tab's that are aligned together which on user interaction
 </Canvas>
 
 ```html
-...
-<button class="tabs__tab tabs__tab--active" role="tab" aria-selected="true" aria-controls="tab1-panel" id="tab1">
-    <span class="uq-icon uq-icon--pin"></span> Tab 1
-</button>
-...
+<div class="tabs">
+  <div class="tabs__tab-list" role="tablist" aria-label="Tab List">
+    <button class="tabs__tab tabs__tab--active" role="tab" aria-selected="true" aria-controls="tab1-panel" id="tab1">
+        <span class="uq-icon uq-icon--pin"></span> Tab 1
+    </button>
+    ...
 ```
 
 ## Sub-variant examples
