review amends, naming changes, tweeks

--- a/packages/storybook-html/src/components/card/card.docs.mdx
+++ b/packages/storybook-html/src/components/card/card.docs.mdx
@@ -22,13 +22,13 @@ The height of the cards in a group all equalises by default.
 
 ```html
 <div class="uq-card">
-  <a class="uq-card__link__outer" href="#">Card title</a>
-  <div class="uq-card__image__wrapper">
+  <a class="uq-card__link-outer" href="#">Card title</a>
+  <div class="uq-card__image-wrapper">
     <div class="uq-card__image">
       <img src="https://campuses.uq.edu.au/files/9492/stlucia-card.jpg" alt="Card image description">
     </div>
   </div>
-  <div class="uq-card__content__wrapper">
+  <div class="uq-card__content-wrapper">
     <div class="uq-card__content">
       <div class="uq-card__header">
         <h3 class="uq-card__title">Card title</h3>
@@ -78,7 +78,7 @@ Button variants are restricted to purple and it's outline version.
 ```html
 <div class="uq-card">
   ...
-  <div class="uq-card__content__wrapper">
+  <div class="uq-card__content-wrapper">
     ...
     <div class="uq-card__actions">
       <button class="uq-button uq-button--purple" href="#">Learn more</button>
@@ -129,16 +129,16 @@ For story card, the sub-title is grey in colour, 16px, normal weight 400 and is 
 
 ```html
 <div class="uq-card uq-card--story">
-  <a class="uq-card__link__outer" href="#">Card title</a>
-  <div class="uq-card__image__wrapper">
+  <a class="uq-card__link-outer" href="#">Card title</a>
+  <div class="uq-card__image-wrapper">
     <div class="uq-card__image">
       <img src="https://campuses.uq.edu.au/files/9749/gatton-card2.jpg" alt="Card image description">
     </div>
   </div>
-  <div class="uq-card__content__wrapper">
+  <div class="uq-card__content-wrapper">
     <div class="uq-card__content">
       <div class="uq-card__header">
-        <p class="uq-card__title__super uq-card__title__super--grey">SUB-TITLE</p>
+        <p class="uq-card__title-super uq-card__title-super--grey">SUB-TITLE</p>
         <h3 class="uq-card__title">Card title</h3>
       </div>
     </div>
@@ -159,16 +159,16 @@ For event card, the sub-title is purple-light in colour, 16px, medium weight 500
 
 ```html
 <div class="uq-card uq-card--event">
-  <a class="uq-card__link__outer" href="#">Card title</a>
-  <div class="uq-card__image__wrapper">
+  <a class="uq-card__link-outer" href="#">Card title</a>
+  <div class="uq-card__image-wrapper">
     <div class="uq-card__image">
       <img src="https://campuses.uq.edu.au/files/9480/herston-card.jpg" alt="Card image description">
     </div>
   </div>
-  <div class="uq-card__content__wrapper">
+  <div class="uq-card__content-wrapper">
     <div class="uq-card__content">
       <div class="uq-card__header">
-        <p class="uq-card__title__super">DD MONTH</p>
+        <p class="uq-card__title-super">DD MONTH</p>
         <h3 class="uq-card__title">Card title</h3>
       </div>
     </div>
