--- a/packages/storybook-html/src/components/card/card.docs.mdx
+++ b/packages/storybook-html/src/components/card/card.docs.mdx
@@ -12,6 +12,8 @@ import StatusBadge from '../../../.storybook/custom/components/StatusBadge';
 The card component is used to provide a brief summary of content or a task, often with a link to more detail. Cards are frequently displayed alongside other cards to group related content or tasks.
 The height of the cards in a group all equalises by default. 
 
+> By default, the card component when hovered or active has a shadow but when the card contains a text link or a button, it drops the shadow.
+
 ## Default example
 
 ### Default card
@@ -21,8 +23,7 @@ The height of the cards in a group all equalises by default.
 </Canvas>
 
 ```html
-<div class="uq-card">
-  <a class="uq-card__link-outer" href="#">Card title</a>
+<div class="uq-card uq-card--has-link">
   <div class="uq-card__image-wrapper">
     <div class="uq-card__image">
       <img src="https://campuses.uq.edu.au/files/9492/stlucia-card.jpg" alt="Card image description">
@@ -76,7 +77,7 @@ Button variants are restricted to purple and it's outline version.
 </Canvas>
 
 ```html
-<div class="uq-card">
+<div class="uq-card uq-card--has-link">
   ...
   <div class="uq-card__content-wrapper">
     ...
