--- a/packages/storybook-html/src/components/card/card.docs.mdx
+++ b/packages/storybook-html/src/components/card/card.docs.mdx
@@ -12,9 +12,9 @@ import StatusBadge from '../../../.storybook/custom/components/StatusBadge';
 The card component is used to provide a brief summary of content or a task, often with a link to more detail. Cards are frequently displayed alongside other cards to group related content or tasks.
 The height of the cards in a group all equalises by default. 
 
-> By default, the card component when hovered or active has a shadow but when it contains a text link or a button, it drops the shadow.
-
 ## Default example
+
+> By default, the card component is clickable anywhere on the card and when hovered or active has a shadow but when it contains a text link or a button, it is clickable only on the link or button and drops off the shadow.
 
 ### Default card
 
@@ -24,6 +24,7 @@ The height of the cards in a group all equalises by default.
 
 ```html
 <div class="uq-card">
+  <a class="uq-card__link" href="#">Card title</a>
   <div class="uq-card__image-wrapper">
     <div class="uq-card__image">
       <img src="https://campuses.uq.edu.au/files/9492/stlucia-card.jpg" alt="Card image description">
